# Floor-Control-Dashboard

./: .env.example  .gitignore  .reloadignore  README.md  inspeccionar_modelo.py  pyproject.toml  rxconfig.py  test_services.py
app/: app.py  reactflow.py  workflow_builder.py
app/agents/: __init__.py  nexus_agent.py  prompts.py  tools.py
app/components/monitor/: __init__.py  alert_feed.py  chat_panel.py  context_menu.py  knowledge_graph.py  model_viewer.py  sensor_dashboard.py
app/components/shared/: __init__.py  design_tokens.py  simulation_controller.py  state_bridge.py
app/components/workflow/: __init__.py  canvas.py  config_panel.py  controls.py  dialogs.py  header.py  toolbox.py
app/extractors/: glb_parser.py
app/models/: __init__.py
app/pages/: __init__.py  monitor.py  workflow_builder.py
app/services/: __init__.py  database.py  notification_service.py  pending_simulation.py  sensor_simulator.py  workflow_engine.py  workflow_service.py
app/states/: __init__.py  agent_state.py  monitor_state.py  nexus_state.py  simulation_state.py  workflow_state.py
assets/: interaction.js  interaction_works.js  test.py  visibility_controller.js
tests/: __init__.py  conftest.py  test_database.py  test_glb_parser.py  test_notification_service.py  test_sensor_simulator.py  test_workflow_engine.py
twin_react/: index.html  package-lock.json  package.json
twin_react/src/: index.css
twin_react/src/stores/: useWorkflowStore.js
