[project]
name = "floor-control-dashboard"
version = "0.1.0"
description = "Industrial equipment monitoring system with 3D visualization and workflow automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "reflex==0.8.20",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.50.0",
]

[dependency-groups]
dev = [
    "pygltflib>=1.16.5",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

